--- a/app/views/shared/_prefooter.html.erb
+++ b/app/views/shared/_prefooter.html.erb
@@ -1,7 +1,7 @@
-<div class="prefooter">
-    <div class="inner">
-        <h2><%= t('welcome.call_to_actions.lets_save_our_planet_together') %></h2>
-        <p class="lead"><%= t('welcome.how_it_works.sign_up_text') %> </p>
-        <a href="/" class="btn btn-lg btn-success"><%= t('welcome.call_to_actions.go_climate_neutral') %></a>
-    </div>
-</div>
+<section class="bg-brand">
+  <div class="max-w-6xl mx-auto py-20 px-10 lg:px-0 text-center">
+    <h3 class="text-4xl my-5"><%= t('welcome.call_to_actions.lets_save_our_planet_together') %></h3>
+    <p class="my-3 text-xl"><%= t('welcome.how_it_works.sign_up_text') %> </p>
+    <a href="/" class="button-brand"><%= t('welcome.call_to_actions.go_climate_neutral') %></a>
+  </div>
+</section>
