--- a/app/views/welcome/business.html.erb
+++ b/app/views/welcome/business.html.erb
@@ -1,5 +1,12 @@
+<% content_for :stylesheets do %>
+  <%= webpack_entrypoint_stylesheet_tags 'main_old' %>
+<% end %>
+<% content_for :javascripts do %>
+  <%= webpack_entrypoint_javascript_tags 'main_old', onerror: 'throw "Loading Javascript " + this.src + " failed"' %>
+<% end %>
+
 <div class="site-wrapper-first">
-  <%= render "shared/header" %>
+  <%= render "shared/header_old" %>
   <div class="inner">
 
     <h1 class="cover-heading"><%= title(t('welcome.business.for_companies')) %></h1>
@@ -109,7 +116,7 @@
   </div>
 </div>
 
-<%= render "shared/footer" %>
+<%= render "shared/footer_old" %>
 
 <% content_for :javascript_tags do %>
   <script>
