--- a/app/views/business/climate_report_invoices/thank_you.html.erb
+++ b/app/views/business/climate_report_invoices/thank_you.html.erb
@@ -1,5 +1,12 @@
+<% content_for :stylesheets do %>
+  <%= webpack_entrypoint_stylesheet_tags 'main_old' %>
+<% end %>
+<% content_for :javascripts do %>
+  <%= webpack_entrypoint_javascript_tags 'main_old', onerror: 'throw "Loading Javascript " + this.src + " failed"' %>
+<% end %>
+
 <div class="site-wrapper-first">
-  <%= render "shared/header" %>
+  <%= render "shared/header_old" %>
   <div class="inner inner--bottom-padding">
 
     <span class="glyphicon glyphicon-large glyphicon-heart" aria-hidden="true"></span>
@@ -20,7 +27,7 @@
   </div>
 </div>
 
-<%= render "shared/footer" %>
+<%= render "shared/footer_old" %>
 
 <%= intercom_script_tag(
   custom_data: {
