--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,12 @@
+<% content_for :stylesheets do %>
+  <%= webpack_entrypoint_stylesheet_tags 'main_old' %>
+<% end %>
+<% content_for :javascripts do %>
+  <%= webpack_entrypoint_javascript_tags 'main_old', onerror: 'throw "Loading Javascript " + this.src + " failed"' %>
+<% end %>
+
 <div class="site-wrapper-first">
-  <%= render "shared/header" %>
+  <%= render "shared/header_old" %>
   <div class="inner">
 
     <h1 class="cover-heading"><%=t 'sign_up_for_a_climate_neutral_life' %></h1>
