--- a/app/views/flight_offsets/new.html.erb
+++ b/app/views/flight_offsets/new.html.erb
@@ -1,5 +1,12 @@
+<% content_for :stylesheets do %>
+  <%= webpack_entrypoint_stylesheet_tags 'main_old' %>
+<% end %>
+<% content_for :javascripts do %>
+  <%= webpack_entrypoint_javascript_tags 'main_old', onerror: 'throw "Loading Javascript " + this.src + " failed"' %>
+<% end %>
+
 <div class="site-wrapper-first">
-  <%= render "shared/header" %>
+  <%= render "shared/header_old" %>
   <div class="inner">
 
     <span class="green-leaf"><%= image_tag webpack_asset_path('images/green.svg'), style: 'width: 100px' %></span>
@@ -115,4 +122,4 @@
   </div>
 </div>
 
-<%= render "shared/footer" %>
+<%= render "shared/footer_old" %>
