--- a/app/views/gift_cards/index.html.erb
+++ b/app/views/gift_cards/index.html.erb
@@ -1,8 +1,15 @@
 <% set_meta_tags og: { image: webpack_asset_path('images/giftcards_en.jpg') } if I18n.locale == :en %>
 <% set_meta_tags og: { image: webpack_asset_path('images/giftcards_sv.jpg') } if I18n.locale == :sv %>
 
+<% content_for :stylesheets do %>
+  <%= webpack_entrypoint_stylesheet_tags 'main_old' %>
+<% end %>
+<% content_for :javascripts do %>
+  <%= webpack_entrypoint_javascript_tags 'main_old', onerror: 'throw "Loading Javascript " + this.src + " failed"' %>
+<% end %>
+
 <div class="site-wrapper-first">
-  <%= render "shared/header" %>
+  <%= render "shared/header_old" %>
   <div class="inner">
 
     <div class="container gift-cards-intro">
@@ -127,7 +134,7 @@
   </div>
 </div>
 
-<%= render "shared/footer" %>
+<%= render "shared/footer_old" %>
 
 <script type="text/javascript">
 document.getElementById('choose-1-months').addEventListener('click', function() {
