--- a/app/views/gift_cards/new.html.erb
+++ b/app/views/gift_cards/new.html.erb
@@ -1,5 +1,12 @@
+<% content_for :stylesheets do %>
+  <%= webpack_entrypoint_stylesheet_tags 'main_old' %>
+<% end %>
+<% content_for :javascripts do %>
+  <%= webpack_entrypoint_javascript_tags 'main_old', onerror: 'throw "Loading Javascript " + this.src + " failed"' %>
+<% end %>
+
 <div class="site-wrapper-first">
-  <%= render "shared/header" %>
+  <%= render "shared/header_old" %>
   <div class="inner">
 
     <h1><%= title(t('views.gift_cards.new.your_gift_card_order')) %></h1>
@@ -64,4 +71,4 @@
   </div>
 </div>
 
-<%= render "shared/footer" %>
+<%= render "shared/footer_old" %>
