--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,5 +1,12 @@
+<% content_for :stylesheets do %>
+  <%= webpack_entrypoint_stylesheet_tags 'main_old' %>
+<% end %>
+<% content_for :javascripts do %>
+  <%= webpack_entrypoint_javascript_tags 'main_old', onerror: 'throw "Loading Javascript " + this.src + " failed"' %>
+<% end %>
+
 <div class="site-wrapper-first site-wrapper-first--no-trees">
-  <%= render "shared/header" %>
+  <%= render "shared/header_old" %>
   <div class="inner">
     <span class="section-label"><%=t 'views.projects.index.latest_project' %></span>
     <h1 class="cover-heading">
@@ -134,7 +141,7 @@
   </div>
 </div>
 
-<%= render "shared/footer" %>
+<%= render "shared/footer_old" %>
 
 <% content_for :javascript_tags do %>
   <script>
