--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,8 +8,15 @@
   window.urlToShare = '<%=t 'goclimateneutral_url' %>users/<%= @user.id %>'
 <% end %>
 
+<% content_for :stylesheets do %>
+  <%= webpack_entrypoint_stylesheet_tags 'main_old' %>
+<% end %>
+<% content_for :javascripts do %>
+  <%= webpack_entrypoint_javascript_tags 'main_old', onerror: 'throw "Loading Javascript " + this.src + " failed"' %>
+<% end %>
+
 <div class="site-wrapper-first">
-  <%= render "shared/header" %>
+  <%= render "shared/header_old" %>
   <div class="inner">
 
     <a id="show-video" href=""><span class="glyphicon glyphicon-large" aria-hidden="true"><%= image_tag webpack_asset_path("images/play.png") %></span></a>
