--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -5,9 +5,9 @@
 <section class="bg-brand bg-brand-image bg-bottom bg-no-repeat bg-cover">
   <div class="text-center pt-16 pb-48 px-10 lg:px-0 max-w-2xl mx-auto">
     <i class="fa fa-2x fa-globe text-big-icon color-icon" aria-hidden="true"></i>
-    <h1 class="text-5xl my-5"><%= title(t('about_us')) %></h1>
-    <p class="text-2xl leading-normal mb-5"><%= description(t('about_us_intro')) %></p>
-    <p class="text-2xl leading-normal mb-5"><%= description(t('about_us_intro_2')) %></p>
+    <h1 class="text-3xl md:text-5xl my-5"><%= title(t('about_us')) %></h1>
+    <p class="text-normal md:text-2xl leading-normal mb-5"><%= description(t('about_us_intro')) %></p>
+    <p class="text-normal md:text-2xl leading-normal mb-5"><%= description(t('about_us_intro_2')) %></p>
   </div>
 </section>
 
