--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -39,7 +39,7 @@
           <label class="cursor-pointer" aria-haspopup="true" aria-expanded="false">
             <%= current_user.user_name.nil? || current_user.user_name.empty? ? current_user.email : current_user.user_name %> <i class="fa fa-caret-down" aria-hidden="true"></i>
             <input type="checkbox">
-            <ul class="droppy-menu droppy-menu-right" aria-labelledby="user-menu"> 
+            <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="user-menu"> 
               <li><a href="<%= dashboard_path %>">Dashboard</a></li>
               <li><%= link_to t('views.shared.header.navigation.offset_flight'), new_flight_footprint_path %></li>
               <li><a href="<%= edit_user_registration_path %>"><%=t 'settings' %></a></li>
