--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -37,7 +37,7 @@ body {
 }
 
 .button {
-  @apply bg-bg text-black border border-gray-400 py-2 px-4 rounded inline-block cursor-pointer;
+  @apply bg-bg text-black border border-gray-400 py-2 px-4 rounded inline-block cursor-pointer whitespace-no-wrap;
 }
 
 .button:hover {
