Split css into components and fix header bug

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -11,85 +11,7 @@ body {
   font-family: 'Raleway', sans-serif;
 }
 
-.bg-brand {
-  background-color: #f3f9f9;
-  
-  &-image {
-    background-color: #f3f9f9;
-    background-image: url("../images/background-illustrated-2.png");
-  }
+.bg-brand-image {
+  background-image: url("../images/background-illustrated-2.png");
 }
 
-.bg-secondary {
-  background-color: #f7f5e8;
-}
-
-.bg-bg {
-  background-color: #fff;
-}
-
-.bg-dark {
-  background-color: #444;
-}
-
-.color-icon {
-  color: #bbd2bd;
-}
-
-.button {
-  @apply bg-bg text-black border border-gray-400 py-2 px-4 rounded inline-block cursor-pointer whitespace-no-wrap;
-}
-
-.button:hover {
-  @apply border-gray-500 bg-gray-200 text-black
-}
-
-.button-transparent {
-  @apply button;
-  background-color: transparent;
-}
-
-.button-brand {
-  @apply button text-white;
-  background-color: #5cb85c; // bootstrap green
-  border-color: #4cae4c;
-}
-
-.button-brand:hover {
-  @apply text-white;
-  background-color: #449d44; // bootstrap green
-  border-color: #398439;
-}
-
-.dropdown {
-  @apply relative inline-block;
-
-  input[type='checkbox'] { 
-    display: none
-  }
-
-  .dropdown-menu {
-    // min-width: 160px;
-    @apply hidden absolute top-100 left-0 bg-bg border border-gray-300 rounded py-1 my-1 shadow-md text-left;
-  }
-
-  .dropdown-menu-up {
-    @apply top-auto bottom-100;
-  }
-
-  .dropdown-menu-right {
-    @apply left-auto right-0;
-  }
-
-  .dropdown-menu > li > a {
-    @apply whitespace-no-wrap block py-1 px-5
-  }
-
-  .dropdown-menu > li > a:hover {
-    @apply bg-gray-200
-  }
-
-  input[type='checkbox']:checked ~ .dropdown-menu {
-    @apply block;
-  }
-}
