--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -4,7 +4,7 @@
 
 <section class="bg-brand bg-brand-image bg-bottom bg-no-repeat bg-cover">
   <div class="text-center pt-16 pb-48 px-10 lg:px-0 max-w-2xl mx-auto">
-    <i class="fa fa-2x fa-globe text-big-icon color-icon" aria-hidden="true"></i>
+    <i class="fa fa-2x fa-globe text-big-icon text-icon" aria-hidden="true"></i>
     <h1 class="text-3xl md:text-5xl my-5"><%= title(t('about_us')) %></h1>
     <p class="text-normal md:text-2xl leading-normal mb-5"><%= description(t('about_us_intro')) %></p>
     <p class="text-normal md:text-2xl leading-normal mb-5"><%= description(t('about_us_intro_2')) %></p>
@@ -82,7 +82,7 @@
 
 <section class="bg-secondary">
   <div class="max-w-2xl mx-auto pt-16 pb-20 px-10 lg:px-0 text-center">
-    <i class="fa fa-2x fa-question-circle text-big-icon color-icon" aria-hidden="true"></i>
+    <i class="fa fa-2x fa-question-circle text-big-icon text-icon" aria-hidden="true"></i>
     <h2 class="text-4xl my-5"><%=t 'about_us_why_do_we_exist' %></h2>
     <p class="text-xl leading-normal mb-5"><%=t 'about_us_why_do_we_exist_text' %></p>
   </div>
@@ -90,7 +90,7 @@
 
 <section class="bg-bg">
   <div class="max-w-2xl mx-auto pt-16 pb-20 px-10 lg:px-0 text-center">
-    <i class="fa fa-2x fa-leaf text-big-icon color-icon" aria-hidden="true"></i>
+    <i class="fa fa-2x fa-leaf text-big-icon text-icon" aria-hidden="true"></i>
     <h2 class="text-4xl my-5"><%=t 'about_us_how_do_we_stop_climate_change' %></h2>
     <p class="text-xl leading-normal mb-5"><%=t 'about_us_how_do_we_stop_climate_change_text' %></p>
     <p class="text-xl leading-normal mb-5"><%=t 'about_us_how_do_we_stop_climate_change_text_2' %></p>
