Add footer link to flights offset

--- a/app/views/shared/_footer_old.html.erb
+++ b/app/views/shared/_footer_old.html.erb
@@ -18,6 +18,7 @@
             <li><%= link_to t('views.shared.header.sign_up'), root_url%></li>
             <li><%= link_to t('navigation.gift_cards'), gift_cards_path %></li>
             <li><%= link_to t('for_business'), business_path %></li>
+            <li><%= link_to t('views.shared.header.navigation.flights'), new_flight_footprint_path %></li>
           </ul>
         </div>
         <div class="col-xs-12 col-sm-3 col-md-2 text-left">
