--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -2,14 +2,7 @@
   <%= render "shared/header" %>
 </nav>
 
-<section class="bg-brand bg-brand-image bg-bottom bg-no-repeat bg-cover">
-  <div class="text-center pt-16 pb-48 px-10 lg:px-0 max-w-2xl mx-auto">
-    <i class="fa fa-2x fa-globe text-big-icon text-icon" aria-hidden="true"></i>
-    <h1 class="text-3xl md:text-5xl my-5"><%= title(t('about_us')) %></h1>
-    <p class="text-normal md:text-2xl leading-normal mb-5"><%= description(t('about_us_intro')) %></p>
-    <p class="text-normal md:text-2xl leading-normal mb-5"><%= description(t('about_us_intro_2')) %></p>
-  </div>
-</section>
+<%= render "shared/section_hero", locals: { icon_class: 'fa-globe', title: t('about_us'), body: [t('about_us_intro'), t('about_us_intro_2')] } %>
 
 <section>
   <div class="max-w-6xl mx-auto py-20 px-10 lg:px-0">
@@ -80,21 +73,8 @@
   </div>
 </section>
 
-<section class="bg-secondary">
-  <div class="max-w-2xl mx-auto pt-16 pb-20 px-10 lg:px-0 text-center">
-    <i class="fa fa-2x fa-question-circle text-big-icon text-icon" aria-hidden="true"></i>
-    <h2 class="text-4xl my-5"><%=t 'about_us_why_do_we_exist' %></h2>
-    <p class="text-xl leading-normal mb-5"><%=t 'about_us_why_do_we_exist_text' %></p>
-  </div>
-</section>
+<%= render "shared/section", locals: { icon_class: 'fa-question-circle', title: t('about_us_why_do_we_exist'), body: t('about_us_why_do_we_exist_text') }  %>
 
-<section class="bg-bg">
-  <div class="max-w-2xl mx-auto pt-16 pb-20 px-10 lg:px-0 text-center">
-    <i class="fa fa-2x fa-leaf text-big-icon text-icon" aria-hidden="true"></i>
-    <h2 class="text-4xl my-5"><%=t 'about_us_how_do_we_stop_climate_change' %></h2>
-    <p class="text-xl leading-normal mb-5"><%=t 'about_us_how_do_we_stop_climate_change_text' %></p>
-    <p class="text-xl leading-normal mb-5"><%=t 'about_us_how_do_we_stop_climate_change_text_2' %></p>
-  </div>
-</section>
+<%= render "shared/section", locals: { section_class: 'bg-bg', icon_class: 'fa-leaf', title: t('about_us_how_do_we_stop_climate_change'), body: [t('about_us_how_do_we_stop_climate_change_text'), t('about_us_how_do_we_stop_climate_change_text_2')] } %>
 
 <%= render "shared/footer" %>
