--- a/app/assets/main/components/select.scss
+++ b/app/assets/main/components/select.scss
@@ -4,8 +4,8 @@
     leading-6
     bg-white
     text-black
-    text-xl
-    border border-gray-400 rounded
+    text-base
+    border border-primary rounded
     appearance-none
     pr-8;
 }
